@@ -30,7 +30,7 @@ export KOS_CPPFLAGS="${KOS_CPPFLAGS} ${KOS_INC_PATHS_CPP} -fno-operator-names -f
 # Which standards modes we want to compile for
 # Note that this only covers KOS itself, not necessarily anything else compiled
 # with kos-cc or kos-c++.
-export KOS_CSTD="-std=gnu99"
+export KOS_CSTD="-std=c99"
 export KOS_CPPSTD="-std=gnu++98"
 
 GCCVER="`kos-cc -v 2>&1 | tail -1 | awk '{print $3}'`"
