@@ -117,19 +117,20 @@ void pvr_scene_begin() {
    rx and ry are appropriate (i.e. *rx = 1024 and *ry = 512 for 640x480).
    Also, note that this probably won't work with DMA mode for now... */
 void pvr_scene_begin_txr(pvr_ptr_t txr, uint32 *rx, uint32 *ry) {
+    int buf = pvr_state.view_target ^ 1;
     (void)ry;
 
     /* For the most part, this isn't very much different than the normal render setup.
        And, yes, if you remember KOS 1.1.6, this pretty much looks similar to what was
        there. I'm quite uncreative with my variable naming ;) */
     // Mark us as rendering to a texture
-    pvr_state.to_texture = 1;
+    pvr_state.to_texture[buf] = 1;
 
     // Set the render pitch up
-    pvr_state.to_txr_rp = (*rx) * 2 / 8;
+    pvr_state.to_txr_rp[buf] = (*rx) * 2 / 8;
 
     // Set the output address
-    pvr_state.to_txr_addr = (uint32)(txr) - PVR_RAM_INT_BASE;
+    pvr_state.to_txr_addr[buf] = (uint32)(txr) - PVR_RAM_INT_BASE;
 
     pvr_scene_begin();
 }
@@ -329,7 +330,3 @@ int pvr_check_ready() {
     else
         return -1;
 }
-
-
-
-
