@@ -13,6 +13,9 @@ KallistiOS version 2.0.1 -----------------------------------------------
       and wants to maintain them, let me know. [LS]
 - DC  Fixed fmath functions so they compile in C99 mode [LS]
 - *** Cleaned up warnings with -std=gnu99 for C code [LS]
+- *** Cleaned up warnings with -std=c99 for C code [LS]
+- DC  Changed the PVR render-to-texture support to allow for two render-to-
+      texture passes without an intervening render-to-screen pass [LS]
 
 KallistiOS version 2.0.0 -----------------------------------------------
 - DC  Broadband Adapter driver fixes [Dan Potter == DP]
